[project]
name = "thepipe_api"
version = "0.1.0"
license = { text = "MIT License" }
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Emmett McFarlane", email = "emmett@thepi.pe" }]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://thepi.pe"
Documentation = "https://thepi.pe/docs"
Repository = "https://github.com/emcf/thepipe"
Issues = "https://github.com/emcf/thepipe/issues"
Changelog = "https://github.com/emcf/thepipe/releases"

[project.scripts]
thepipe = "thepipe:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
